# Vestigium

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  loom.yml  miri.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  loader.rs  record.rs  replay.rs  runner.rs
crates/test_target/: Cargo.toml  build.rs
crates/test_target/src/: main.rs
crates/trace/: Cargo.toml
crates/trace/src/: format.rs
crates/vmm/: Cargo.toml
crates/vmm/src/: ept.rs  lib.rs  paging.rs  partition.rs  vcpu.rs
target_app/: Cargo.toml  build.rs
target_app/.cargo/: config.toml
target_app/src/: main.rs
