# Defines the deterministic execution trace format and serialization structures.
[package]
name = "trace"
version = "0.1.0"
edition = "2024"

[dependencies]
# Data structures serialization traits.
serde = { version = "1.0", features = ["derive"] }
# Fast binary serialization for trace storage.
bincode = "=1.3.3"
# Windows API bindings for architectural types.
windows = "0.62.2"